fixed code not showing

--- a/_sass/minima/_syntax-highlighting.scss
+++ b/_sass/minima/_syntax-highlighting.scss
@@ -7,6 +7,7 @@
 
   .highlighter-rouge & {
     background: #eef;
+    background-color: #000000;
   }
 
   .c     { color: #998; font-style: italic } // Comment
